# DistGraph

./: CMakeLists.txt  DistBlas.cpp  README.MD
core/: Partitioner.cpp  Process3DGrid.cpp  SpMat.cpp
cpp/: CMakeLists.txt  dist_embed.cpp  distblas.cpp
cpp/algo/: algo.hpp  baseline.hpp  baseline_fused_mm.hpp  baseline_spmm.hpp  fusedmm.hpp  multi_source_bfs.hpp  sparse_embedding.hpp  spgemm.hpp  spgemm_spmm_iterative.hpp  spgemm_with_tiling.hpp  spmm.hpp
cpp/algo/bfs/: multi_source_bfs.hpp
cpp/algo/embedding/: algo.hpp  sparse_embedding.hpp
cpp/algo/fusedMM/: baseline_fused_mm.hpp  fusedmm.hpp
cpp/algo/gat/: gat.hpp  gat_layer.hpp
cpp/algo/sddmm/: sddmm.hpp
cpp/algo/spgemm/: spgemm.hpp  spgemm_with_tiling.hpp
cpp/algo/spmm/: baseline_spmm.hpp  spmm.hpp
cpp/core/: common.cpp  common.h  common.hpp  csr_linked_list.hpp  csr_local.hpp  dense_mat.hpp  distributed_mat.hpp  mpi_type_creator.hpp  sparse_mat.cpp  sparse_mat.hpp  sparse_mat_tile.hpp
cpp/embedding/: algo.hpp
cpp/io/: parrallel_IO.cpp  parrallel_IO.hpp
cpp/net/: data_comm.cpp  data_comm.hpp  process_3D_grid.cpp  process_3D_grid.hpp  tile_based_data_comm.hpp
cpp/partition/: partitioner.cpp  partitioner.hpp
datasets/: minst_embedding.txt  minst_job.sh
datasets/MSBFS/: msbfs.sh
datasets/SpGEMM/: spgemm.sh
datasets/SpMM/: spmm.sh
datasets/SparseEmbedding/: sp_embedding.sh
docs/: DISTFNE_README.MD
include/: CMakeLists.txt
include/DistBLAS/: Common.hpp  ParallelIO.h  ParallelIO.hpp  Partitioner.hpp  Process3DGrid.hpp  SpMat.hpp  Tuple.hpp
include/DistBlas/: Process3DGrid.hpp
io/: CombBLASIOReader.cpp  CombBLASIOReader.tpp
tests/: CMakeLists.txt  IOTests.cpp  IO_tests.cpp  Process3DGridTests.cpp  communication_tests.cpp  data_structure_tests.cpp  process_3D_grid_tests.cpp
