cmake_minimum_required(VERSION 3.17)set(CMAKE_CXX_STANDARD 17)set(CMAKE_CXX_STANDARD_REQUIRED ON)project(DistBlas)add_library(distblas_api interface DistBlas/Process3DGrid.hpp)target_link_libraries(distblas_api interface ${OpenBLAS_CXX_LIBRARIES})target_link_libraries(distblas_api interface ${MPI_CXX_LIBRARIES})target_include_directories(distblas_api interface ${CMAKE_CURRENT_SOURCE_DIR})